Center fighter picker and frame opponents in battle